--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
   gtag('config', 'AW-16674275091');
 </script>
+
+<!-- Event snippet for Sayfa görüntüleme conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16674275091/71XhCNTWgMsZEJP-9I4-',
+      'value': 1.0,
+      'currency': 'TRY'
+  });
+</script>
+
 <title>Kadifekale Bilgi Sayfası</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
